--- a/indiapets/.vscode/settings.json
+++ b/indiapets/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "venv/bin/python"
+    "python.pythonPath": "C:\\Users\\SatyaRaj\\AppData\\Local\\Programs\\Python\\Python36\\python.exe"
 }
